--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,4 +1,4 @@
 
-<div class="d-grid gap-3 ">
-  <gifs-card-item [gif]="gif" *ngFor="let gif of gifsData"></gifs-card-item>
+<div class="row">
+  <gifs-card-item [gif]="gif" *ngFor="let gif of gifsData" class="col-md-3 col-sm-6"></gifs-card-item>
 </div>
